# PyTask

./: .gitignore  App.axaml  App.axaml.cs  Cargo.toml  LICENSE  Program.cs  PyTask.sln  PyTaskAvalonia.csproj  README.md  ViewLocator.cs  WinAPI.cs  app.manifest  build.rs  database.py  macro_recorder.py  main.py  requirements.txt
Converters/: ValueConverters.cs
Installer/: PyTaskInstaller.iss
Models/: MacroEvent.cs  Settings.cs
Serialization/: MacroJsonContext.cs
Services/: GlobalHotkeyService.cs  InputSignature.cs  MacroPlayer.cs  MacroRecorder.cs  SettingsDatabase.cs
ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
Views/: MainWindow.axaml  MainWindow.axaml.cs
fixtures/: open-save-smoke.macro
src/: engine.rs  macro_io.rs  main.rs  model.rs  settings_db.rs
